# format-elan

./: pyproject.toml
src/format_elan/: export_elan.py  utils.py
tests/export_elan/: test_export_elan.py
tests/export_elan/data/: expected_output.txt  input_elan.eaf
